# grid-walker-eval

./: .gitignore  README.md  plan.md  pyproject.toml
adapter_policy/reason_rl/: adapter_config.json
adapter_policy/reason_rl_zero/: README.md  adapter_config.json
adapter_policy/rl/: README.md  adapter_config.json
eval/: browser.py  harness.py  main.py  prompts.py  vlm.py
game/: index.html
src/common/: browser.py  prompts.py  vlm.py
src/data/: collect.py  generate_plain.py  generate_with_reasoning.py
src/environment/: env.py
src/eval/: chat.py  harness.py  main.py
src/game/: index.html
src/scripts/: tomography.py
src/train/: finetune.py  rl.py  rollout.py  validate_multiturn_data.py  vllm_utils.py
