[project]
name = "grid-walker-eval"
version = "0.1.0"
description = "Grid Walker RL environment and Eval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright",
    "openai",
    "peft>=0.17.1",
    "python-dotenv",
    "qwen-vl-utils>=0.0.11",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl",
    "wandb>=0.25.0",
    "transformers>=5.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
